--- a/tradeProcessor/build.gradle
+++ b/tradeProcessor/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'junit:junit:4.13.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.4'
+    implementation 'org.apache.logging.log4j:log4j-api:2.4'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
